# Lab5

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
Controller/: abstract_controller.h  controller.cpp  controller.h
Model/: model.cpp  model.h
Pages/: audio_page.cpp  audio_page.h  base_page.cpp  base_page.h  input_answer_page.cpp  input_answer_page.h  main_page.cpp  main_page.h  pick_an_option_page.cpp  pick_an_option_page.h  radio_button_group.cpp  radio_button_group.h  score_widget.cpp  score_widget.h
Pages/Exercises/: input_answer_exercises_difficult.txt  input_answer_exercises_simple.txt  pick_an_option_exercises_difficult.txt  pick_an_option_exercises_simple.txt
Pages/Helpers/: animation_widget.cpp  animation_widget.h  question_structs.h  radio_button_group.cpp  radio_button_group.h  score_widget.cpp  score_widget.h
View/: abstract_view.h  view.cpp  view.h
